# python-template

./: pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker.yml
config/: env.py
docker/tests/: Dockerfile
scripts/: generate_requirements.sh
src/: main.py
tests/: test_main.py
