[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nishide-dev", email = "nishide.dev@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "pre-commit>=3.7.0",
    "ruff>=0.3.5",
    "pytest-asyncio>=0.23.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_template"]
